add off for price backend & fron-end

--- a/view/admin/addProduct.ejs
+++ b/view/admin/addProduct.ejs
@@ -21,6 +21,7 @@
     </div>
     <input type="text" name="details" placeholder="جزئیات">
 
+
     <input type="text" name="relatedProduct1" placeholder="آی دی کالای مربوط">
     <input type="text" name="relatedProduct2" placeholder="آی دی کالای مربوط">
     <input type="text" name="relatedProduct3" placeholder="آی دی کالای مربوط">
@@ -29,6 +30,7 @@
     <input type="text" name="imageUrl2" placeholder="لینک عکس">
     <input type="text" name="imageUrl3" placeholder="لینک عکس">
     <input type="text" name="imageUrl4" placeholder="لینک عکس">
+    <input type="number" name="off" placeholder="درصد تخفیف">
     <button class="btn" type="submit">create Post</button>
   </form>
 </div>
