--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1432,3 +1432,14 @@ table {
     border-radius: 50%;
   }
 }
+
+.off {
+  top: 0;
+  right: 0;
+  position: absolute;
+  padding: 5px;
+  background-color: red;
+  border-radius: 0 10px 0 10px;
+  font-size: 14px;
+  height: 30px;
+}
