--- a/view/client/index.ejs
+++ b/view/client/index.ejs
@@ -102,7 +102,18 @@
     <div class="box">
       <img src="<%= product.imageUrl %>" />
       <h5><%= product.name %></h5>
-      <h6><%= product.price %> تومان</h6>
+      <span style="display: flex;align-items: center; justify-content: center; gap: 1rem;">
+        <h6 style="<%= (product.off) ? "text-decoration: line-through;color: gray;" : "" %>"><%= product.price.toLocaleString('fa') %> تومان</h6>
+        <% if(product.off){ %>
+        <h6><%= (product.price / 100 * (100 - product.off )).toLocaleString('fa') %> تومان</h6>
+        <% } %>
+      </span>
+      <% if(product.off){ %>
+      <div class="off">
+        <h4>%<%= product.off %> تخفیف</h4>
+      </div>
+      <% } %>
+
       <% if(product.sale){ %>
       <div class="sale">
         <h4><%= product.sale %></h4>
