--- a/view/client/invoice.ejs
+++ b/view/client/invoice.ejs
@@ -70,7 +70,7 @@
         <span>
           <h4>جمع قیمت محصولات : <%- order.paymentInfo.totalPrice - 35000 %></h4>
           <h4>هزینه ارسال : 35000</h4>
-          <h4>هزینه نهایی : <%- order.paymentInfo.totalPrice %></h4>
+          <h4> مبلغ پرداختی : <%- order.paymentInfo.totalPrice %></h4>
         </span>
         <span style="display: flex; flex-direction: column; align-items: center; text-align: center;">
           <img src="http://localhost:3000/images/logo.png" alt="" style="width: 250px; height: 200px; ">
